turn the issues action to echo events instead of issues as that was more understable and does not throw random errors due to object being not found

--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -5,4 +5,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Output issues from Github Context
-        run: 'echo "Issues: ${{ toJson(github.event.issue) }}"'
+        run: 'echo "Issues: ${{ toJson(github.event) }}"'
